add profile section

--- a/index.html
+++ b/index.html
@@ -52,10 +52,23 @@
         </header>
         <main>
             <section class="profile">
-
+                <div class="profile-intro">
+                    <p>Hello! I am</p>
+                    <h1 id="myName">Gabriel Allba</h1>
+                </div>
+                <div class="hire-button">
+                    <p>HIRE ME</p>
+                </div>
             </section>
             <section class="main-content">
-                
+                <article class="about" id="about-me">
+                </article>
+                <article class="projects" id="my-project">
+                </article>
+                <article class="skills" id="my-skills">
+                </article>
+                <article class="contact" id="my-contact">
+                </article>
             </section>
         </main>
         <footer>
