add project section

--- a/index.html
+++ b/index.html
@@ -62,9 +62,64 @@
                 </div>
             </section>
             <section class="main-content">
-                <article class="about" id="about-me">
-                </article>
                 <article class="projects" id="my-project">
+                    <div class="project-title">
+                        <h2>My Project</h2>
+                        <p>My little project here started from 2021. 
+                            Some of them was finished with fellow from CodeCademy. 
+                            Thanks to CodeCademy.
+                        </p>
+                    </div>
+                    <div class="project-list">
+                        <div class="project-worked">
+                            <div class="project-container">
+                                <h3>Portfolio</h3>
+                                <div class="view-popup">
+                                    <p>view project</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-worked">
+                            <div class="project-container">
+                                <img src="./images/mixedmessages.PNG" alt="">
+                                <div class="view-popup">
+                                    <p>view project</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-worked">
+                            <div class="project-container">
+                                <img src="./images/teacozy.PNG" alt="">
+                                <div class="view-popup">
+                                    <p>view project</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-worked">
+                            <div class="project-container">
+                                <h3>Tea Cozy</h3>
+                                <div class="view-popup">
+                                    <p>view project</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-worked">
+                            <div class="project-container">
+                                <h3>Tea Cozy</h3>
+                                <div class="view-popup">
+                                    <p>view project</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-worked">
+                            <div class="project-container">
+                                <h3>Tea Cozy</h3>
+                                <div class="view-popup">
+                                    <p>view project</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </article>
                 <article class="skills" id="my-skills">
                 </article>
