add link to project

--- a/index.html
+++ b/index.html
@@ -73,25 +73,31 @@
                     <div class="project-list">
                         <div class="project-worked">
                             <div class="project-container">
-                                <h3>Portfolio</h3>
+                                <img src="./images/classicgarage.png" alt="">
                                 <div class="view-popup">
-                                    <p>view project</p>
-                                </div>
+                                    <a href="https://gabrielallba.github.io/Company-Home-Page/" target="_blank">
+                                        <p>view project</p>
+                                    </a>
+                                </div>      
                             </div>
                         </div>
                         <div class="project-worked">
                             <div class="project-container">
-                                <img src="./images/mixedmessages.PNG" alt="">
+                                <img src="./images/mixedmessages.png" alt="">
                                 <div class="view-popup">
-                                    <p>view project</p>
-                                </div>
+                                    <a href="https://gabrielallba.github.io/Mixed-Message/" target="_blank">
+                                        <p>view project</p>
+                                    </a>
+                                </div>                               
                             </div>
                         </div>
                         <div class="project-worked">
                             <div class="project-container">
-                                <img src="./images/teacozy.PNG" alt="">
+                                <img src="./images/teacozy.png" alt="">
                                 <div class="view-popup">
-                                    <p>view project</p>
+                                    <a href="https://gabrielallba.github.io/Tea-Cozy/" target="_blank">
+                                        <p>view project</p>
+                                    </a>
                                 </div>
                             </div>
                         </div>
