add image in project section

--- a/index.html
+++ b/index.html
@@ -103,28 +103,35 @@
                         </div>
                         <div class="project-worked">
                             <div class="project-container">
-                                <h3>Tea Cozy</h3>
+                                <img src="./images/naturelover.png" alt="">
                                 <div class="view-popup">
-                                    <p>view project</p>
+                                    <a href="https://gabrielallba.github.io/Nature-Lovers-Club/" target="_blank">
+                                        <p>view project</p>
+                                    </a>
                                 </div>
                             </div>
                         </div>
                         <div class="project-worked">
                             <div class="project-container">
-                                <h3>Tea Cozy</h3>
+                                <img src="./images/excursion.png" alt="">
                                 <div class="view-popup">
-                                    <p>view project</p>
+                                    <a href="https://gabrielallba.github.io/Excursion/" target="_blank">
+                                        <p>view project</p>
+                                    </a>
                                 </div>
                             </div>
                         </div>
                         <div class="project-worked">
                             <div class="project-container">
-                                <h3>Tea Cozy</h3>
+                                <img src="./images/webdesignsytem.png" alt="">
                                 <div class="view-popup">
-                                    <p>view project</p>
+                                    <a href="https://gabrielallba.github.io/Web-Design-System/" target="_blank">
+                                        <p>view project</p>
+                                    </a>
                                 </div>
                             </div>
                         </div>
+                       
                     </div>
                 </article>
                 <article class="skills" id="my-skills">
