Add media query in profile and projects section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                 </div>
             </section>
             <section class="main-content">
+                <article class="about" id="about-me">
+                    
+                </article>
                 <article class="projects" id="my-project">
                     <div class="project-title">
                         <h2>My Project</h2>
