add skill section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
     </head>
     <body>
         <header>
@@ -139,6 +138,51 @@
                     </div>
                 </article>
                 <article class="skills" id="my-skills">
+                    <div class="outer-cont">
+                        <h2>Skills</h2>
+                        <div class="skill-container">
+                            <div class="skill-desc">
+                                <img src="https://img.icons8.com/color/48/000000/html-5--v1.png"/>
+                                <p>HTML 5</p>
+                                <p class="level">Intermediate</p>
+                            </div>
+                            <div class="skill-desc">
+                                <img src="https://img.icons8.com/color/48/000000/css3.png"/>
+                                <p>CSS 3</p>
+                                <p class="level">Intermediate</p>
+                            </div>
+                            <div class="skill-desc">
+                                <img src="https://img.icons8.com/color/48/000000/javascript--v1.png"/>
+                                <p>JavaScript</p>
+                                <p class="level">Basic</p>
+                            </div>
+                            <div class="skill-desc">
+                                <img src="https://img.icons8.com/color/48/000000/git.png"/>
+                                <p>Git</p>
+                                <p class="level">Basic</p>
+                            </div>
+                            <div class="skill-desc">
+                                <img src="https://img.icons8.com/color/48/000000/visual-studio-code-2019.png"/>
+                                <p>Visual Studio Code</p>
+                                <p class="level">Basic</p>
+                            </div>
+                            <div class="skill-desc">
+                                <img src="https://img.icons8.com/color/48/000000/java-coffee-cup-logo--v1.png"/>
+                                <p>Java</p>
+                                <p class="level">Basic</p>
+                            </div>
+                            <div class="skill-desc">
+                                <img src="https://img.icons8.com/color/48/000000/python--v1.png"/>
+                                <p>Python</p>
+                                <p class="level">Basic</p>
+                            </div>
+                            <div class="skill-desc">
+                                <img src="https://img.icons8.com/color/48/000000/c-plus-plus-logo.png"/>
+                                <p>C++</p>
+                                <p class="level">Basic</p>
+                            </div>
+                        </div>
+                    </div>
                 </article>
                 <article class="contact" id="my-contact">
                 </article>
