--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        
+        <header>
+            <h1><span style="color: rgb(0, 162, 255); font-size: 3.3rem;">G</span>abriel</h1>
+            <nav>
+                <ul>
+                    <li><a href="#Home">Home</a></li>
+                    <li><a href="#About">About</a></li>
+                    <li><a href="#Project">Project</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section class="container" id="Home">
+                <h1>Hello, world!</h1>
+                <h1>I'm a Web Developer</h1>
+                <h1>From <span style="color: rgb(238, 0, 79);">Indonesia</span></h1>
+            </section>
+            <section class="container" id="About"></section>
+            <section class="container" id="Project"></section>
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
