--- a/index.html
+++ b/index.html
@@ -23,8 +23,35 @@
                 <h1>Hello, world!</h1>
                 <h1>I'm a <span style="color: rgb(0, 162, 255);">Web Developer</span></h1>
                 <h1>From <span style="color: rgb(238, 0, 79);">Indonesia</span></h1>
+                <div class="social-media">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                </div>
             </section>
-            <section class="container" id="About"></section>
+            <section class="container" id="About">
+                <div class="about-container" id="profile-picture">
+                    <img src="./images/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="">
+                </div>
+                <div class="about-container" id="profile-desc">
+                    <h2>About Me</h2>
+                    <p>I am <span style="font-family: 'Poppins-Bold';">Gabriel Allba</span>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <div class="skills">
+                        <h2>Skills</h2>
+                        <p>Basic</p>
+                        <img src="https://img.icons8.com/color/48/000000/javascript--v1.png"/>
+                        <img src="https://img.icons8.com/color/48/000000/git.png"/>
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png"/>
+                        <img src="https://img.icons8.com/color/48/000000/c-plus-plus-logo.png"/>
+                        <img src="https://img.icons8.com/color/48/000000/java-coffee-cup-logo--v1.png"/>
+                        <img src="https://img.icons8.com/color/48/000000/python--v1.png"/>
+                        <p>Intermediate</p>
+                        <img src="https://img.icons8.com/color/48/000000/html-5--v1.png"/>
+                        <img src="https://img.icons8.com/color/48/000000/css3.png"/>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="container" id="Project"></section>
         </main>
         <footer>
