add project section

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         </header>
         <main>
             <section class="container" id="Home">
-                <h1>Hello, world!</h1>
-                <h1>I'm a <span style="color: rgb(0, 162, 255);">Web Developer</span></h1>
-                <h1>From <span style="color: rgb(238, 0, 79);">Indonesia</span></h1>
+                <h1>Hello, world! I'm a <span style="color: rgb(0, 162, 255);">Web Developer</span> From <span style="color: rgb(238, 0, 79);">Indonesia</span></h1>
                 <div class="social-media">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                     <i class="fa fa-github" aria-hidden="true"></i>
@@ -35,23 +33,64 @@
                 </div>
                 <div class="about-container" id="profile-desc">
                     <h2>About Me</h2>
-                    <p>I am <span style="font-family: 'Poppins-Bold';">Gabriel Allba</span>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>I am <span style="font-family: 'Poppins-Bold';">Gabriel Allba</span>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur.</p>
                     <div class="skills">
                         <h2>Skills</h2>
-                        <p>Basic</p>
-                        <img src="https://img.icons8.com/color/48/000000/javascript--v1.png"/>
-                        <img src="https://img.icons8.com/color/48/000000/git.png"/>
-                        <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png"/>
-                        <img src="https://img.icons8.com/color/48/000000/c-plus-plus-logo.png"/>
-                        <img src="https://img.icons8.com/color/48/000000/java-coffee-cup-logo--v1.png"/>
-                        <img src="https://img.icons8.com/color/48/000000/python--v1.png"/>
-                        <p>Intermediate</p>
-                        <img src="https://img.icons8.com/color/48/000000/html-5--v1.png"/>
-                        <img src="https://img.icons8.com/color/48/000000/css3.png"/>
+                        <div class="skill-img">
+                            <img src="https://img.icons8.com/color/48/000000/javascript--v1.png"/>
+                            <img src="https://img.icons8.com/color/48/000000/git.png"/>
+                            <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png"/>
+                            <img src="https://img.icons8.com/color/48/000000/c-plus-plus-logo.png"/>
+                            <img src="https://img.icons8.com/color/48/000000/java-coffee-cup-logo--v1.png"/>
+                            <img src="https://img.icons8.com/color/48/000000/python--v1.png"/>
+                            <img src="https://img.icons8.com/color/48/000000/html-5--v1.png"/>
+                            <img src="https://img.icons8.com/color/48/000000/css3.png"/>
+                        </div>
                     </div>
                 </div>
             </section>
-            <section class="container" id="Project"></section>
+            <section class="container" id="Project">
+                <h2>Project</h2>
+                <p>These are my project in 2021. Some of them created with fellow from CodeCademy. Thanks to <a href="https://www.codecademy.com/" target="_blank" style="text-decoration: none; color:rgb(0, 84, 153);">CodeCademy.</a></p>
+                <div class="project-section">
+                    <div class="project-box">
+                        <a href="https://gabrielallba.github.io/Excursion/" target="_blank">
+                            <img src="./images/excursion.png" alt="">
+                        </a>
+                        <p>Lorem ipsum</p>
+                    </div>
+                    <div class="project-box">
+                        <a href="https://gabrielallba.github.io/Tea-Cozy/" target="_blank">
+                            <img src="./images/teacozy.png" alt="">
+                        </a>
+                        <p>Lorem ipsum</p>
+                    </div>
+                    <div class="project-box">
+                        <a href="https://gabrielallba.github.io/Company-Home-Page/" target="_blank">
+                            <img src="./images/classicgarage.png" alt="">
+                        </a>
+                        <p>Lorem ipsum</p>
+                    </div>
+                    <div class="project-box">
+                        <a href="https://gabrielallba.github.io/Nature-Lovers-Club/" target="_blank">
+                            <img src="./images/naturelover.png" alt="">
+                        </a>
+                        <p>Lorem ipsum</p>
+                    </div>
+                    <div class="project-box">
+                        <a href="https://gabrielallba.github.io/Mixed-Message/" target="_blank">
+                            <img src="./images/mixedmessages.png" alt="">
+                        </a>
+                        <p>Lorem ipsum</p>
+                    </div>
+                    <div class="project-box">
+                        <a href="https://gabrielallba.github.io/Web-Design-System/" target="_blank">
+                            <img src="./images/webdesignsytem.png" alt="">
+                        </a>
+                        <p>Lorem ipsum</p>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
 
