--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1><span style="color: rgb(0, 162, 255); font-size: 3.3rem;">G</span>abriel</h1>
             <nav>
                 <ul>
-                    <li><a href="#Home">Home</a></li>
+                    <li id="li-home"><a href="#Home"><p>Home</p></a></li>
                     <li><a href="#About">About</a></li>
                     <li><a href="#Project">Project</a></li>
                 </ul>
@@ -29,22 +29,26 @@
             </section>
             <section class="container" id="About">
                 <div class="about-container" id="profile-picture">
-                    <img src="./images/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="">
+                    <img src="./images/fix-profile.jpg" alt="">
                 </div>
                 <div class="about-container" id="profile-desc">
                     <h2>About Me</h2>
-                    <p>I am <span style="font-family: 'Poppins-Bold';">Gabriel Allba</span>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur.</p>
+                    <p>Hello! I am <span style="font-family: 'Poppins-Bold';">Gabriel Allba Shemi Yuma</span>
+                        and I'm a student from <span style="font-family: 'Poppins-Bold';">Universitas Atma Jaya Yogyakarta.</span>
+                        I learn programming since <span style="font-family: 'Poppins-Bold';">February 2021.</span> 
+                        In my free time, I like to read some tech/programming article on <a href="https://medium.com/">Medium</a>, do exercise, and also playing guitar.</p>
                     <div class="skills">
                         <h2>Skills</h2>
+                        <p>These are my <span style="font-family: 'Poppins-Bold';">basic</span> skills:</p>
                         <div class="skill-img">
+                            <img src="https://img.icons8.com/color/48/000000/html-5--v1.png"/>
+                            <img src="https://img.icons8.com/color/48/000000/css3.png"/>
                             <img src="https://img.icons8.com/color/48/000000/javascript--v1.png"/>
                             <img src="https://img.icons8.com/color/48/000000/git.png"/>
                             <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png"/>
                             <img src="https://img.icons8.com/color/48/000000/c-plus-plus-logo.png"/>
                             <img src="https://img.icons8.com/color/48/000000/java-coffee-cup-logo--v1.png"/>
                             <img src="https://img.icons8.com/color/48/000000/python--v1.png"/>
-                            <img src="https://img.icons8.com/color/48/000000/html-5--v1.png"/>
-                            <img src="https://img.icons8.com/color/48/000000/css3.png"/>
                         </div>
                     </div>
                 </div>
