add link to social media

--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
             <section class="container" id="Home">
                 <h1>Hello, world! I'm a <span style="color: rgb(0, 162, 255);">Web Developer</span> From <span style="color: rgb(238, 0, 79);">Indonesia</span></h1>
                 <div class="social-media">
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                    <i class="fa fa-github" aria-hidden="true"></i>
-                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                    <a href="https://www.instagram.com/rielgbrl/?hl=en" target="_blank">
+                        <i class="fa fa-instagram" aria-hidden="true">
+                        </i>
+                    </a>
+                    <a href="https://github.com/GabrielAllba" target="_blank">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                    </a>
                 </div>
             </section>
             <section class="container" id="About">
