change instagram link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <section class="container" id="Home">
                 <h1>Hello, world! I'm a <span style="color: rgb(0, 162, 255);">Web Developer</span> From <span style="color: rgb(238, 0, 79);">Indonesia</span></h1>
                 <div class="social-media">
-                    <a href="https://www.instagram.com/rielgbrl/?hl=en" target="_blank">
+                    <a href="https://www.instagram.com/gabrielallba/?hl=en" target="_blank">
                         <i class="fa fa-instagram" aria-hidden="true">
                         </i>
                     </a>
