change navbar position

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <header>
+        <div class="header-tittle">
             <h1><span style="color: rgb(0, 162, 255); font-size: 3.3rem;">G</span>abriel</h1>
+        </div>
+        <header>
             <nav>
                 <ul>
                     <li id="li-home"><a href="#Home"><p>Home</p></a></li>
