--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
             </section>
         </main>
         <footer>
-
+            <a href="#Home">
+                <p>Contact Me</p>
+            </a>
         </footer>
     </body>
     <script src="./script/script.js"></script>
